# sealhackathon

./: README.md  check_dependencies.py  pyproject.toml  requirements.txt  test_system_prompt.py
backend/: SRS-ex.txt  backend.py  gemini_api.py  qwen.py  test.py  testapi.py  userstory-ex.txt
backend/input/: gemini_fusion1.txt  gemini_fusion2.txt  gemini_general.txt  gemini_local.txt  gemini_processing.txt  gemini_srs.txt  gemini_suggestion.txt  gemini_translate.txt  gemini_userstory.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/assets/: ChatDisplay.tsx
